--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ h2 {
 h1{
     border: 10px solid brown;
     background-color: rgb(187, 71, 71);
+    font-size: 30px;
     
 }
 h4 {
@@ -20,4 +21,10 @@ h4 {
 }
 img{
     border:10px solid black; 
+}
+.a{
+    text-align: center;
+}
+a:hover{
+    color: rgb(0, 153, 255);
 }
